--- a/orchestrator/readme
+++ b/orchestrator/readme
@@ -14,5 +14,10 @@ One queue only
 }
 
 {
+    "message": "Proces_Jobs",
+    "job_id": "",
+    "file_num": 2343,
+    "random_nums": [12,4,5,6,7,,88],
+    
 
 }
